# Breedbase-Client

./: .brapi_token.json  .env.example  .gitignore  AGENT_TESTING.md  CLAUDE.md  Dockerfile  Helper.py  LICENSE.txt  README.md  README_AUTH.md  agent_brapi_test.py  agent_mcp_test.py  auths.py  brapi_endpoints.csv  client dev.py  client.py  client_0_0.py  client_dev.py  docker-compose.yml  logger.py  pyproject.toml  requirements.txt  sweetpotatoquery.py  test.py  test_agent.py  test_fastmcp.py  test_import.py  test_mcp.py
.brapi_temp/: .brapi_token.json  tmp7p2ecsqc.csv
Data/Raw/: studies.csv
Examples/: CONFIGURATION.md  Conversational_Workflow.md  Covington_MetaAnalysis_EDA.md  Get.md  Pictures.md  Search.md  skills.md
Sweetpotatobase/: auths.py
brapi_v2/: README.md  brapi_generated.json  manual.py  model.py
cache/sweetpotatobase/sessions/: sessions.json
cache/yambase/sessions/: sessions.json
old/brapi_v2/: client_simple_dev.py  rawclient.py  rawclient_debug.py
old/brapi_v2/core/: models.py
old/brapi_v2/genotyping/: models.py
old/brapi_v2/germplasm/: models.py
old/brapi_v2/phenotyping/: models.py
src/: main.py
src/client/: client.py  helpers.py
src/client/auth/: base_oauth.py  no_auth.py  sgn_auth.py
src/client/capabilities/: capability_builder.py  helpers.py  type.py
src/client/capabilities_llm/: capability_builder.py  type.py
src/client/data/: metadata.csv
src/config/: type.py  value.py
src/mcp_server/: http_server.py  mcp_server.py
src/mcp_server/session/: result_cache.py  session_manager.py
src/mcp_server/tools/: discovery.py
src/mcp_server/tools/file_handling/: images.py  result_cache.py
src/psa/: __init__.py  client.py  config.py  main.py
src/psa/auth/: __init__.py  base_oauth.py  no_auth.py  sgn_auth.py
src/psa/tools/: __init__.py  discovery.py  germplasm.py  observations.py  studies.py
src/utils/: logger.py  maintenance.py
tests/: mcp.py  test_client.py
(+6 files in other folders)
